<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:orientation="vertical"
            tools:context=".presentation.mainScreens.homeScreen.HomeScreenFragment">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/radio_group_switcher_style"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/today_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_switcher_style"
                    android:button="@null"
                    android:padding="3dp"
                    android:text="@string/home_screen_tab_name_1"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/tomorrow_tab"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_button_switcher_style"
                    android:button="@null"
                    android:padding="3dp"
                    android:text="@string/home_screen_tab_name_2"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:paddingEnd="24dp"
                android:text="--------"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/place_icon" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="----"
                android:textColor="@color/grey_1"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/main_icon"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:scaleX="1.8"
                android:scaleY="1.8" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="---\u00B0"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/weather_in_one_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/grey_rectangle"
                android:paddingHorizontal="30dp"
                android:paddingVertical="8dp"
                android:text="------"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="9">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_parameter_title"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/wind_speed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="--- km/h"
                        android:textAlignment="center"
                        android:textColor="@color/grey_1"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:background="@color/grey_1" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_parameter_title"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="---%"
                        android:textAlignment="center"
                        android:textColor="@color/grey_1"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="6dp"
                    android:background="@color/grey_1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/low_temperature_parameter_title"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView

                        android:id="@+id/min_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="---\u00B0"
                        android:textAlignment="center"
                        android:textColor="@color/grey_1"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:background="@color/grey_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/hourly_forecast_block_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/blue_rectangle"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/hourly_temp_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:text="---\u00B0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/hourly_icon_1"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:scaleType="centerCrop"
                        android:scaleX="1.3"
                        android:scaleY="1.3" />

                    <TextView
                        android:id="@+id/hourly_time_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="20dp"
                        android:text="----"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/grey_rectangle"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/hourly_temp_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:text="---\u00B0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/hourly_icon_2"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:scaleType="centerCrop"
                        android:scaleX="1.3"
                        android:scaleY="1.3" />

                    <TextView
                        android:id="@+id/hourly_time_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="20dp"
                        android:text="----"
                        android:textColor="@color/grey_1"
                        android:textSize="16sp" />
                </LinearLayout>

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/grey_rectangle"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/hourly_temp_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:text="---\u00B0"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/hourly_icon_3"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:scaleType="centerCrop"
                        android:scaleX="1.3"
                        android:scaleY="1.3" />

                    <TextView
                        android:id="@+id/hourly_time_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="20dp"
                        android:text="----"
                        android:textColor="@color/grey_1"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>